// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useUntabbable should also disable the container when \`includeContainer\` is true 1`] = `
<div>
  <div
    tabindex="-1"
  >
    <button
      tabindex="-1"
    >
      First
    </button>
    <button
      tabindex="-1"
    >
      Second
    </button>
  </div>
  <div
    tabindex="-1"
  >
    <button
      tabindex="-1"
    >
      First
    </button>
    <button
      tabindex="-1"
    >
      Second
    </button>
  </div>
  <div
    tabindex="-1"
  >
    <button
      tabindex="-1"
    >
      First
    </button>
    <button
      tabindex="-1"
    >
      Second
    </button>
  </div>
  <div
    tabindex="-1"
  >
    <button
      tabindex="-1"
    >
      First
    </button>
    <button
      tabindex="-1"
    >
      Second
    </button>
  </div>
  <div
    tabindex="-1"
  >
    <button
      tabindex="-1"
    >
      First
    </button>
    <button
      tabindex="-1"
    >
      Second
    </button>
  </div>
</div>
`;

exports[`useUntabbable should not alter the tabindex when \`disabled\` is true 1`] = `
<div>
  <div>
    <button>
      First
    </button>
    <button>
      Second
    </button>
  </div>
  <div>
    <button>
      First
    </button>
    <button>
      Second
    </button>
  </div>
  <div>
    <button>
      First
    </button>
    <button>
      Second
    </button>
  </div>
  <div>
    <button>
      First
    </button>
    <button>
      Second
    </button>
  </div>
  <div>
    <button>
      First
    </button>
    <button>
      Second
    </button>
  </div>
</div>
`;

exports[`useUntabbable should restore the previous tabindex when disabled 1`] = `
<div>
  <div>
    <button
      tabindex="2"
    >
      First
    </button>
    <button>
      Second
    </button>
  </div>
  <div>
    <button
      tabindex="2"
    >
      First
    </button>
    <button>
      Second
    </button>
  </div>
  <div>
    <button
      tabindex="2"
    >
      First
    </button>
    <button>
      Second
    </button>
  </div>
  <div>
    <button
      tabindex="2"
    >
      First
    </button>
    <button>
      Second
    </button>
  </div>
  <div>
    <button
      tabindex="2"
    >
      First
    </button>
    <button>
      Second
    </button>
  </div>
</div>
`;

exports[`useUntabbable should set the focusable children with tabindex=-1 1`] = `
<div>
  <div>
    <button
      tabindex="-1"
    >
      First
    </button>
    <button
      tabindex="-1"
    >
      Second
    </button>
  </div>
  <div>
    <button
      tabindex="-1"
    >
      First
    </button>
    <button
      tabindex="-1"
    >
      Second
    </button>
  </div>
  <div>
    <button
      tabindex="-1"
    >
      First
    </button>
    <button
      tabindex="-1"
    >
      Second
    </button>
  </div>
  <div>
    <button
      tabindex="-1"
    >
      First
    </button>
    <button
      tabindex="-1"
    >
      Second
    </button>
  </div>
  <div>
    <button
      tabindex="-1"
    >
      First
    </button>
    <button
      tabindex="-1"
    >
      Second
    </button>
  </div>
</div>
`;
